GUACAMOLE-724: Correct rendering of tiled clients on IE10+ by migrating to grid layout.

--- a/guacamole/src/main/frontend/src/app/client/styles/tiled-client-list.css
+++ b/guacamole/src/main/frontend/src/app/client/styles/tiled-client-list.css
@@ -25,7 +25,14 @@
 
 .tiled-client-list li.client-tile {
     position: relative;
-    display: inline-flex;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
     flex-direction: column;
     line-height: 1.5;
 }
@@ -56,6 +63,9 @@
 }
 
 .tiled-client-list li.client-tile .main {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
     flex: 1;
 }
 
